move wwwroot -> docs

--- a/conf/httpd.conf
+++ b/conf/httpd.conf
@@ -16,4 +16,4 @@ ErrorLog ${ErrorLog}
 TransferLog ${InstanceRoot}/logs/access.log
 
 Listen 5000
-DocumentRoot ${InstanceRoot}/wwwroot
+DocumentRoot ${InstanceRoot}/docs
